--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <hr />
     <h3><a href="./public/movie-ranking.html">
     Movie Ranking Project</a></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/movies.png" height="200" alt="movie ranking project photo" />
+    <img src="./assets/images/movies.png" height="200" alt="movie ranking project photo" />
 <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 <img src="./assets/images/births.png" height="200" alt="birthday invite project photo"/><br />
 <a href="./public/about.html">About Me</a>
